--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-ANYKERNEL_SOURCE=
-ANYKERNEL_SOURCE_BRANCH=
-KERNEL_SOURCE=
-KERNEL_SOURCE_BRANCH=
-KERNEL_TARGET=
+ANYKERNEL_SOURCE=https://github.com/qqlittleice233/AnyKernel3
+ANYKERNEL_SOURCE_BRANCH=master
+KERNEL_SOURCE=https://github.com/qqlittleice233/android_kernel_xiaomi_sm8350-haydn
+KERNEL_SOURCE_BRANCH=12.0
+KERNEL_TARGET=haydn
 BUILD_ARGS:CC=clang LD=ld.lld
